--- a/src/ImageView/ImageView.vcxproj
+++ b/src/ImageView/ImageView.vcxproj
@@ -144,18 +144,34 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="allocator.cpp" />
+    <ClCompile Include="com_utility.cpp" />
+    <ClCompile Include="error.cpp" />
+    <ClCompile Include="expected.cpp" />
+    <ClCompile Include="file_system_utility.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="graphics_utility.cpp" />
     <ClCompile Include="settings.cpp" />
+    <ClCompile Include="string.cpp" />
+    <ClCompile Include="string_builder.cpp" />
     <ClCompile Include="variant.cpp" />
     <ClCompile Include="view_window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="allocator.hpp" />
+    <ClInclude Include="common_utility.hpp" />
+    <ClInclude Include="com_utility.hpp" />
     <ClInclude Include="defer.hpp" />
     <ClInclude Include="error.hpp" />
+    <ClInclude Include="expected.hpp" />
+    <ClInclude Include="file_system_utility.hpp" />
+    <ClInclude Include="path_utility.hpp" />
+    <ClInclude Include="sequence.hpp" />
     <ClInclude Include="math.hpp" />
     <ClInclude Include="graphics_utility.hpp" />
     <ClInclude Include="settings.hpp" />
+    <ClInclude Include="string.hpp" />
+    <ClInclude Include="string_builder.hpp" />
     <ClInclude Include="variant.hpp" />
     <ClInclude Include="view_window.hpp" />
     <ClInclude Include="wic.hpp" />
