--- a/src/ImageView/ImageView.vcxproj
+++ b/src/ImageView/ImageView.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="com_utility.cpp" />
     <ClCompile Include="error.cpp" />
     <ClCompile Include="file_system_utility.cpp" />
+    <ClCompile Include="line_reader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="graphics_utility.cpp" />
     <ClCompile Include="string.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="defer.hpp" />
     <ClInclude Include="error.hpp" />
     <ClInclude Include="file_system_utility.hpp" />
+    <ClInclude Include="line_reader.hpp" />
     <ClInclude Include="path_utility.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="sequence.hpp" />
